j--/tests/pass/Lor.java
package pass;

public class Lor {
	public boolean lor(boolean a, boolean b) {
		return a || b;
	}
}
