j--/tests/fail/Lor.java
package fail;

public class Lor {

	public static void main(String[] args) {
		System.out.println('coucou' || true);
	}

}
